add_library(CommonRenderTestContext STATIC common.hpp common.cpp)
target_link_libraries(CommonRenderTestContext PUBLIC Catch2 ${NICKEL_MAIN_ENTRY_NAME})
set_target_properties(CommonRenderTestContext PROPERTIES FOLDER tests/renderer)

add_subdirectory(triangle)
add_subdirectory(rectangle)
add_subdirectory(texture_rect)
add_subdirectory(colorful_rectangle)
add_subdirectory(colorful_rectangle2)
add_subdirectory(cube3d)
add_subdirectory(skybox)
add_subdirectory(gltf)