macro(AddRHITest test_name)
    add_executable(${test_name} main.cpp)
    target_link_libraries(${test_name} PRIVATE Nickel.Runtime Nickel.Graphics)
    CopyDLL(${test_name})
endmacro(AddRHITest)

add_subdirectory(01triangle)
add_subdirectory(02vertex_buffer)
add_subdirectory(03cube)
add_subdirectory(04texture_cube)