macro(AddRHITest test_name)
    aux_source_directory(./ ${test_name}_src)
    add_executable(${test_name} ${${test_name}_src})
    target_link_libraries(${test_name} PRIVATE Nickel.Runtime Nickel.Graphics)
    CopyDLL(${test_name})
endmacro(AddRHITest)

add_subdirectory(triangle)
add_subdirectory(vertex_buffer)
add_subdirectory(indices_buffer)
add_subdirectory(cube)
add_subdirectory(texture_cube)
add_subdirectory(instance)
add_subdirectory(gltf)