set(PX_BUILDSNIPPETS OFF)
set(PX_BUILDPVDRUNTIME OFF)
set(PX_GENERATE_STATIC_LIBRARIES ON)
set(NV_USE_STATIC_WINCRT ON)
set(NV_USE_DEBUG_WINCRT ON)
set(PX_FLOAT_POINT_PRECISE_MATH OFF)
set(PHYSX_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/physx/)
set(PX_OUTPUT_LIB_DIR ${CMAKE_CURRENT_BINARY_DIR})
set(PX_OUTPUT_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
set(TARGET_BUILD_PLATFORM windows)
set(PX_COPY_EXTERNAL_DLL OFF)
set(CMAKE_EXE_LINKER_FLAGS_PROFILE)
set(CMAKE_EXE_LINKER_FLAGS_CHECKED)
set(PX_SUPPORT_OMNI_PVD OFF)
if (NOT WIN32)
    set(TARGET_BUILD_PLATFORM linux)
endif()
add_subdirectory(physx/compiler/public)